# Cricket-all-format

./: .gitignore  Bowling_Modelling.ipynb  DataCleaning.ipynb  NN_Batting_Modelling.ipynb  NN_Bowling_Modelling.ipynb  ODI_Batting_Modelling.ipynb  README.md  RF_Batting_Modelling.ipynb  combiningData.py  pyproject.toml  requirements.txt  research.ipynb  webscraping.py
Data/: Final_Batting.csv  Final_Bowling.csv  ODI_Batting.csv  ODI_Bowling.csv  T20_Batting.csv  T20_Bowling.csv  Test_Batting.csv  Test_Bowling.csv  cleaned_combined_cricket_stats.csv  combined_cricket_stats.csv  cricket_players.csv
Data/Final/: odi_bat_processed_data.csv  odi_bowl_processed_data.csv  t20_bat_processed_data.csv  t20_bowl_processed_data.csv  test_bat_processed_data.csv  test_bowl_processed_data.csv
my_dir/cricket_performance/: oracle.json
my_dir/cricket_performance/trial_00/: trial.json
my_dir/cricket_performance/trial_01/: trial.json
my_dir/cricket_performance/trial_02/: trial.json
