[tool.poetry]
name = "cricket-all-format"
version = "0.1.0"
description = ""
authors = ["Henil Gajjar <henilgajjar08@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
matplotlib = "^3.10.0"
numpy = "2.0.0"
bs4 = "^0.0.2"
seaborn = "^0.13.2"
requests = "^2.32.3"
webdriver-manager = "^4.0.2"
ipykernel = "^6.29.5"
selenium = "^4.28.1"
shap = "^0.46.0"
xgboost = "^2.1.3"
hyperopt = "^0.2.7"
statsmodels = "^0.14.4"
tensorflow = "^2.18.0"
keras-tuner = "^1.4.7"
keras = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
